[package]
name = "git"
version = "0.1.0"
authors = ["xecua <courser4848@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flate2 = "1.0.16"
clap = "2.33.3"
git2 = "0.13.8"
sha-1 = "0.9.1"
log = "0.4.14"
env_logger = "0.9.0"
thiserror = "1.0.29"
anyhow = "1.0.44"
chrono = "0.4.19"
